; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v10/drivers/extr_i2c.c_i2c_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v10/drivers/extr_i2c.c_i2c_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLOCK_HIGH_TIME = common dso_local global i32 0, align 4
@I2C_DATA_HIGH = common dso_local global i32 0, align 4
@I2C_CLOCK_HIGH = common dso_local global i32 0, align 4
@I2C_DATA_LOW = common dso_local global i32 0, align 4
@START_CONDITION_HOLD_TIME = common dso_local global i32 0, align 4
@I2C_CLOCK_LOW = common dso_local global i32 0, align 4
@CLOCK_LOW_TIME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @i2c_start() #0 {
  %1 = call i32 (...) @i2c_dir_out()
  %2 = load i32, i32* @CLOCK_HIGH_TIME, align 4
  %3 = sdiv i32 %2, 6
  %4 = call i32 @i2c_delay(i32 %3)
  %5 = load i32, i32* @I2C_DATA_HIGH, align 4
  %6 = call i32 @i2c_data(i32 %5)
  %7 = load i32, i32* @I2C_CLOCK_HIGH, align 4
  %8 = call i32 @i2c_clk(i32 %7)
  %9 = load i32, i32* @CLOCK_HIGH_TIME, align 4
  %10 = call i32 @i2c_delay(i32 %9)
  %11 = load i32, i32* @I2C_DATA_LOW, align 4
  %12 = call i32 @i2c_data(i32 %11)
  %13 = load i32, i32* @START_CONDITION_HOLD_TIME, align 4
  %14 = call i32 @i2c_delay(i32 %13)
  %15 = load i32, i32* @I2C_CLOCK_LOW, align 4
  %16 = call i32 @i2c_clk(i32 %15)
  %17 = load i32, i32* @CLOCK_LOW_TIME, align 4
  %18 = call i32 @i2c_delay(i32 %17)
  ret void
}

declare dso_local i32 @i2c_dir_out(...) #1

declare dso_local i32 @i2c_delay(i32) #1

declare dso_local i32 @i2c_data(i32) #1

declare dso_local i32 @i2c_clk(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
